--- a/src/pages/stack.html
+++ b/src/pages/stack.html
@@ -28,7 +28,7 @@
         <br>
         <h2>HTML</h2>
         <h2>CSS</h2>
-        <h2>Bpptstrap</h2>
+        <h2>Bootstrap</h2>
         <h2>JavaScript</h2>
         <h2>HTML DOM</h2>
         <h2>JSON</h2>
